--- a/client/src/components/landingpage/main/about/about.css
+++ b/client/src/components/landingpage/main/about/about.css
@@ -1,91 +1,84 @@
-
 h1 {
-        font-size: 3rem;
-        text-align: center;
-        padding: 2rem;
-        line-height: 1.5;
+  font-size: 3rem;
+  text-align: center;
+  padding: 2rem;
+  line-height: 1.5;
 }
 
 h1 span {
-    color: rgb(30, 30, 207);
+  color: rgb(30, 30, 207);
 }
 
 .card-container {
-    display: flex;
-    justify-content: center;
-    gap: 30px;
-    width: 100%;
-    margin: 0 auto;
-    padding: 2rem;
-    height: 80vh;
-
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 2rem;
+  height: 90vh;
 }
 
-
 .card-container .card {
-    width: 18%;
-    height: 400px;
-    border-radius: 5px;
+  width: 18%;
+  height: 400px;
+  border-radius: 5px;
+  border: 1px solid rgb(49, 207, 207);
 }
 
 .card .upper-portion {
-    width: 100%;
-    height: 40%;
-    background-color: rgb(49, 207, 207);
-    opacity: .6;
+  width: 100%;
+  height: 40%;
+  background-color: rgb(49, 207, 207);
+  opacity: 0.6;
 }
 
 .image-container {
-    display: flex;
-    justify-content: center;
-    position: relative;
-    width: 6rem;
-    height: 6rem;
-   border-radius: 50%;
-    background-color: white;
-    top: -4rem;
-    margin: 0 auto;
-    border: 6px solid #ededed;
-
+  display: flex;
+  justify-content: center;
+  position: relative;
+  width: 7rem;
+  height: 7rem;
+  border-radius: 50%;
+  background-color: white;
+  top: -4rem;
+  margin: 0 auto;
+  border: 6px solid #ededed;
 }
 
 .image-container img {
-    width: 100%;
-    height: 100%;
-    object-fit:fill;
-    border-radius: 50%;
-    
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+  border-radius: 50%;
 }
 
 .content-portion {
-    width: 100%;
-
+  width: 100%;
 }
 
 .content-portion h4 {
-    text-align: center;
-    margin-top: -3rem;
-    text-transform: capitalize;
+  text-align: center;
+  margin-top: -3rem;
+  text-transform: capitalize;
 }
 
 .info {
-    width: 100%;
-    padding: 0 1rem;
-    text-align: center;
+  width: 100%;
+  padding: 0 1rem;
+  text-align: center;
 }
 
 .info p {
-    background-color: #f7f4f4;
-    padding: 1rem;
-    width: 100%;
-    font-weight: bold;
-    opacity: .6;
-    font-size: 1.4rem;
+  background-color: #f7f4f4;
+  padding: 1rem;
+  margin: 0.5rem 0;
+  width: 100%;
+  font-weight: bold;
+  opacity: 0.6;
+  font-size: 1.2rem;
 }
 
 .info .roll {
   color: rgb(49, 207, 207);
 }
-
-
-
