--- a/client/src/components/landingpage/main/faq/faq.css
+++ b/client/src/components/landingpage/main/faq/faq.css
@@ -1,30 +1,31 @@
-
 .main-div {
-    height:100vh;
-    background-color: #ededed;
-    padding: 2rem;
-
+  height: 100vh;
+  background-color: #ededed;
+  padding: 2rem;
+}
+h2 {
+  margin-top: 6rem;
+  font-weight: 500;
+  font-size: 1.3rem;
 }
 
 .main-div h1 {
-    font-size: 3rem;
-
+  font-size: 3rem;
 }
 
 .main-div h1 span {
-    color: rgb(30,30,207);
+  color: rgb(30, 30, 207);
 }
 
-.accordion  {
-    margin: 1rem auto;
-    width: 85%;
-    padding: 1rem;
-    background-color: #ededed;
+.accordion {
+  margin: 1rem auto;
+  width: 85%;
+  padding: 1rem;
+  background-color: #ededed;
 }
 
 .accordion-body {
-    background-color: #ffffff;
-    padding: .8rem;
-    opacity: .6;
+  background-color: #ffffff;
+  padding: 0.8rem;
+  opacity: 0.6;
 }
-
