--- a/client/src/components/landingpage/main/about/about1234.css
+++ b/client/src/components/landingpage/main/about/about1234.css
@@ -1,15 +1,15 @@
-h1 {
+/* h1 {
   font-size: 3rem;
   text-align: center;
   padding: 2rem;
   line-height: 1.5;
-}
+} */
 
-h1 span {
+/* h1 span {
   color: rgb(30, 30, 207);
-}
+} */
 
-.card-container {
+.cardooo-container {
   display: flex;
   justify-content: center;
   gap: 30px;
@@ -19,21 +19,21 @@ h1 span {
   height: 90vh;
 }
 
-.card-container .card {
+.cardooo-container .cardooo {
   width: 18%;
   height: 400px;
   border-radius: 5px;
   border: 1px solid rgb(49, 207, 207);
 }
 
-.card .upper-portion {
+.cardooo .upper-portion {
   width: 100%;
   height: 40%;
   background-color: rgb(49, 207, 207);
   opacity: 0.6;
 }
 
-.image-container {
+.image-containerooo {
   display: flex;
   justify-content: center;
   position: relative;
@@ -46,7 +46,7 @@ h1 span {
   border: 6px solid #ededed;
 }
 
-.image-container img {
+.image-containerooo img {
   width: 100%;
   height: 100%;
   object-fit: fill;
@@ -63,13 +63,13 @@ h1 span {
   text-transform: capitalize;
 }
 
-.info {
+.infoooo {
   width: 100%;
   padding: 0 1rem;
   text-align: center;
 }
 
-.info p {
+.infoooo p {
   background-color: #f7f4f4;
   padding: 1rem;
   margin: 0.5rem 0;
@@ -79,6 +79,6 @@ h1 span {
   font-size: 1.2rem;
 }
 
-.info .roll {
+.infoooo .roll {
   color: rgb(49, 207, 207);
 }
