--- a/client/src/components/landingpage/main/faq/faq.css
+++ b/client/src/components/landingpage/main/faq/faq.css
@@ -3,13 +3,14 @@
   background-color: #ededed;
   padding: 2rem;
 }
-h2 {
+/* h2 {
   margin-top: 6rem;
   font-weight: 500;
   font-size: 1.3rem;
-}
+} */
 
 .main-div h1 {
+  text-align: center;
   font-size: 3rem;
 }
 
